--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "eslint-config-next": "13.4.10",
     "i18next": "^23.2.11",
     "i18next-resources-to-backend": "^1.1.4",
+    "lucide-react": "^0.261.0",
     "negotiator": "^0.6.3",
     "next": "13.4.10",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
